--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,5 @@
 [submodule "frontend"]
 	url = https://github.com/AbdullahAymanMSRE/university-lms-frontend.git
+[submodule "frontend2"]
+	path = frontend2
+	url = https://github.com/AbdullahAymanMSRE/university-lms-frontend.git
